fix navbar spacing

--- a/styles/site.less
+++ b/styles/site.less
@@ -32,7 +32,11 @@ p {
   height: @short-row-height;
 }
 
-label.lower-level {
+nav.navbar.navbar-default {
+  margin-bottom: 0px;
+}
+
+.spaced {
   margin-top: 15px;
 }
 
